kubernetes/apps/base/arr-stack/sonarr/deployment.yaml
# Sonarr - TV series collection manager
#
# https://sonarr.tv/
# https://github.com/hotio/sonarr
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: arr-stack
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: arr-stack
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: arr-stack
    spec:
      securityContext:
        fsGroup: 3001
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: sonarr
          image: ghcr.io/hotio/sonarr:release-4.0.9.2244 # {"$imagepolicy": "flux-system:sonarr"}
          ports:
            - name: http
              containerPort: 8989
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /tvseries
              subPath: tvseries
            - name: downloads
              mountPath: /data/usenet
              subPath: usenet
            - name: downloads
              mountPath: /data/torrents
              subPath: torrents
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: 128Mi
            limits:
              memory: 1Gi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: media
          persistentVolumeClaim:
            claimName: nfs-media
        - name: downloads
          persistentVolumeClaim:
            claimName: nfs-downloads
