kubernetes/apps/base/arr-stack/sonarr/ingress.yaml
# Sonarr Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: arr-stack
  labels:
    app.kubernetes.io/name: sonarr
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  tls:
    - hosts:
        - sonarr.home-infra.net
      secretName: wildcard-home-infra-net-tls
  rules:
    - host: sonarr.home-infra.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 80
